--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -6,6 +6,8 @@
   gather_facts: false
   tasks:
   - name: Check Elastic version
+#   assert:
+#     than: true
     shell:
       cmd: /opt/elastic/7.10.1/bin/elasticsearch --version
     changed_when: false
