20201230_Ready_without_ip

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
-#переменые записываем в default, не высокий приоритет при переоприделении.
+#Файл для переменных по умолчанию
+#Переменые записанные в default имеют самый  невысокий приоритет при переопределении. 
   elastic_version: "7.10.1"
   elastic_home: "/opt/elastic/{{ elastic_version }}"
