--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,2 +1,3 @@
 ---
 # handlers file for roles
+# директория в которой содержатся все handlers для данной роли (обычно для запуска сервиса по завершению настройки)
