--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,3 @@
 ---
 # vars file for roles
+#директория для других переменных с большим приоритетом (обычно те, которые мы не хотим, чтобы переопределяли)
