--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,3 +1,4 @@
+#Содержит информацию о самой роли для работоспособности galaxy.ansible
 galaxy_info:
   author: Alexey Metlyakov
   description: Install elasticsearch from remote server
@@ -16,7 +17,7 @@ galaxy_info:
   # - CC-BY-4.0
   license: BSD-3-Clause
 
-  min_ansible_version: 2.8
+  min_ansible_version: 2.9
 
   # If this a Container Enabled role, provide the minimum Ansible Container version.
   # min_ansible_container_version:
@@ -50,3 +51,5 @@ galaxy_info:
 dependencies: []
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
+  # Зависимость этой роли от других ролей.
+  #- { role: name_of_role }
