--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 #Содержит информацию о самой роли для работоспособности galaxy.ansible
 galaxy_info:
-  author: Alexey Metlyakov
+  author: Andrey Krylov
   description: Install elasticsearch from remote server
   company: Netology
 
@@ -48,7 +48,7 @@ galaxy_info:
     # NOTE: A tag is limited to a single word comprised of alphanumeric characters.
     #       Maximum 20 tags per role.
 
-dependencies: []
+dependencies: [java-role]
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
   # Зависимость этой роли от других ролей.
